--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@storybook/jest": "^0.1.0",
     "@storybook/react": "^7.0.27",
     "@storybook/react-vite": "^7.0.27",
+    "@storybook/test-runner": "^0.11.0",
     "@storybook/testing-library": "^0.0.14-next.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
